--- a/task-03.html
+++ b/task-03.html
@@ -16,13 +16,19 @@
       .img {
         width: 200px;
         display: flex;
+        margin-left: 15px;
+      }
+
+      .gallery {
+        display: flex;
+        flex-wrap: wrap;
       }
     </style>
   </head>
   <body>
     <p><a href="index.html">На главную</a></p>
 
-    <ul id="gallery"></ul>
+    <ul id="gallery" class="gallery"></ul>
 
     <script src="js/task-03.js" type="module"></script>
   </body>
