--- a/task-03.html
+++ b/task-03.html
@@ -18,6 +18,9 @@
         display: flex;
         margin-left: 15px;
       }
+      .img:hover {
+        transform: scale(1.03);
+      }
 
       .gallery {
         display: flex;
