--- a/task-08.html
+++ b/task-08.html
@@ -17,7 +17,7 @@
     <p><a href="index.html">На главную</a></p>
 
     <div id="controls">
-      <input type="number" min="0" max="100" step="1" />
+      <input type="number" min="0" max="10" step="1" id="inputCount" />
       <button type="button" data-action="render">Создать</button>
       <button type="button" data-action="destroy">Очистить</button>
     </div>
